--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 <body>
-	<title> daniel</title>
+	<title> Titulo de prueba</title>
 <p>esto es una prueba</p>
 <p>Esto es un parrafo</p>
+<p>Esto son mas pruebas</p>
 </body>
 </html>
